# Cyber-Ninja-Monitor

./: .gitignore  Cargo.toml  README.md  stress_test.ps1
audio_cache/: metadata.json
docs/: audio_system.md
src/: ai_personality.rs  audio_manager.rs  lib.rs  main.rs  message_system.rs  network_stats.rs  particles.rs  personality_modal.rs  system_monitor.rs  test_audio.rs  theme.rs  tts.rs
tests/: integration_test.rs  monitor_tests.rs
