[package]
name = "cyber_ninja_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24.1"
egui = "0.24.1"
sysinfo = "0.29.10"
rand = "0.8.5"
chrono = "0.4.31"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.17"
base64 = "0.21"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
image = "0.24" 