[package]
name = "cyber_ninja_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24.1", features = ["glow", "default_fonts", "persistence"] }
sysinfo = "0.29.10"
egui = { version = "0.24.1", features = ["mint", "persistence"] }
egui_extras = { version = "0.24.1", features = ["all_loaders"] }
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.5"
rodio = "0.17.3"
winapi = { version = "0.3.9", features = ["winuser"] }
sha2 = "0.10.8"
resvg = "0.35.0"
usvg = "0.35.0"
tiny-skia = "0.10.0"
noise = "0.8"  # For procedural effects
glam = "0.24"  # For additional math operations

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[build-dependencies]
embed-resource = "2.4.0"

[workspace]
members = ["."]
resolver = "2"

# Asset configuration
[package.metadata]
assets = ["assets/*.svg"]

# Enable optimizations for dependencies even in debug mode
[profile.dev.package."*"]
opt-level = 2

image = "0.24" 